<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MaquinaTuring</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="cadastro_maq_tur">CADASTRO MÁQUINA DE TURING</string>
    <string name="nome_maq_tur">NOME</string>
    <string name="qtd_estados_maq_tur">QUANT. DE ESTADOS</string>
    <string name="alfabeto_maq_tur">ALFABETO</string>
    <string name="estado_inicial_maq_tur">ESTADO INICIAL</string>
    <string name="estados_finais_maq_tur">ESTADOS FINAIS</string>
    <string name="cadastrar_maq_tur">CADASTRAR</string>

    <string name="insercao_func_trans">INSERÇÃO DE FUNÇÕES DE TRANSIÇÃO</string>
    <string name="estado_ini_func_trans">ESTADO INICIAL</string>
    <string name="simbolo_lido_func_trans">SÍMBOLO A SER LIDO</string>
    <string name="estado_novo_func_trans">NOVO ESTADO</string>
    <string name="simbolo_novo_func_trans">NOVO SÍMBOLO</string>
    <string name="movimento_func_transicao">MOVIMENTO(ESQUERDA, DIREITA, PERMANECE)</string>
    <string name="adicionar_func_trans">ADICIONAR</string>


    <string name="lista_cadastradas_maq_tur">LISTA DE MÁQUINAS CADASTRADAS</string>


</resources>
