<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context=".AsActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textSize="20dp"
        android:text="@string/insercao_func_trans"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/edt_estado_ini_func_trans"
            android:hint="@string/estado_ini_func_trans"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/edt_simbolo_lido_func_trans"
            android:hint="@string/simbolo_lido_func_trans"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/edt_estado_novo_func_trans"
            android:hint="@string/estado_novo_func_trans"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/edt_simbolo_novo_func_trans"
            android:hint="@string/simbolo_novo_func_trans"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/edt_movimento_func_trans"
            android:hint="@string/movimento_func_transicao"/>

        <Button
            android:id="@+id/btn_add_func_trans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adicionar_func_trans"
            android:layout_gravity="center" />
    </LinearLayout>
</LinearLayout>

