<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context=".AsActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textSize="20dp"
        android:text="@string/cadastro_maq_tur"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/edt_nome_maq_tur"
            android:hint="@string/nome_maq_tur"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/edt_estado_inicial"
            android:hint="@string/estado_inicial_maq_tur"/>

        <Button
            android:id="@+id/btn_editar_maq_tur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="EDITAR"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/btn_add_func_trans_maq_tur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="INSERIR FUNÇÃO DE TRANSIÇÃO"
            android:layout_gravity="center" />
    </LinearLayout>
</LinearLayout>

